--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/img/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -26,30 +26,30 @@
     <div class="d-flex flex-column wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
-                <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
+                <a class="navbar-brand" href="#"><b>Quitanda Online</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/index.html">Principal</a>
+                            <a class="nav-link text-white" href="index.html">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/contato.html">Contato</a>
+                            <a class="nav-link text-white" href="contato.html">Contato</a>
                         </li>
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/cadastro.html" class="nav-link text-white">Quero Me Cadastrar</a>
+                                <a href="cadastro.html" class="nav-link text-white">Quero Me Cadastrar</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/login.html" class="nav-link text-white">Entrar</a>
+                                <a href="login.html" class="nav-link text-white">Entrar</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
-                                <a href="/carrinho.html" class="nav-link text-white">
+                                <a href="carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
                             </li>
@@ -68,16 +68,16 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-                        <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+                        <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+                        <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-                        <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+                        <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+                        <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-                        <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+                        <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+                        <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
@@ -149,8 +149,8 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <a href="/produto.html">
-                                <img src="/img/produtos/000001.jpg" class="card-img-top">
+                            <a href="produto.html">
+                                <img src="img/produtos/000001.jpg" class="card-img-top">
                             </a>
                             <div class="card-header">
                                 R$ 4,50
@@ -174,7 +174,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000002.jpg" class="card-img-top">
+                            <img src="img/produtos/000002.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -197,7 +197,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000003.jpg" class="card-img-top">
+                            <img src="img/produtos/000003.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -222,7 +222,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart-fill" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000004.jpg" class="card-img-top">
+                            <img src="img/produtos/000004.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -245,7 +245,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000005.jpg" class="card-img-top">
+                            <img src="img/produtos/000005.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -268,7 +268,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000006.jpg" class="card-img-top">
+                            <img src="img/produtos/000006.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -291,7 +291,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000007.jpg" class="card-img-top">
+                            <img src="img/produtos/000007.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -314,7 +314,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000008.jpg" class="card-img-top">
+                            <img src="img/produtos/000008.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -337,7 +337,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart-fill" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000009.jpg" class="card-img-top">
+                            <img src="img/produtos/000009.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -360,7 +360,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000010.jpg" class="card-img-top">
+                            <img src="img/produtos/000010.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -383,7 +383,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000011.jpg" class="card-img-top">
+                            <img src="img/produtos/000011.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -406,7 +406,7 @@
                             <a href="#" class="position-absolute end-0 p-2 text-danger">
                                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
                             </a>
-                            <img src="/img/produtos/000012.jpg" class="card-img-top">
+                            <img src="img/produtos/000012.jpg" class="card-img-top">
                             <div class="card-header">
                                 R$ 4,50
                             </div>
@@ -473,21 +473,21 @@
                         &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 168, Compulândia/PC <br> CNPJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="/privacidade.html" class="text-decoration-none text-dark">
+                        <a href="privacidade.html" class="text-decoration-none text-dark">
                             Política de Privacidade
                         </a><br>
-                        <a href="/termos.html" class="text-decoration-none text-dark">
+                        <a href="termos.html" class="text-decoration-none text-dark">
                             Termos de Uso
                         </a><br>
-                        <a href="/quemsomos.html" class="text-decoration-none text-dark">
+                        <a href="quemsomos.html" class="text-decoration-none text-dark">
                             Quem Somos
                         </a><br>
-                        <a href="/trocas.html" class="text-decoration-none text-dark">
+                        <a href="trocas.html" class="text-decoration-none text-dark">
                             Trocas e Devoluções
                         </a>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="/contato.html" class="text-decoration-none text-dark">
+                        <a href="contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
                         </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
@@ -499,7 +499,7 @@
             </div>
         </footer>
     </div>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
