--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Quitanda Online :: Cadastro</title>
 </head>
