--- a/fechamento_pedido.html
+++ b/fechamento_pedido.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/img/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font/bootstrap-icons.css">s
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Quitanda Online :: Fechamento da Compra</title>
 </head>
@@ -36,22 +36,22 @@
                             <a class="nav-link text-white" href="/index.html">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/contato.html">Contato</a>
+                            <a class="nav-link text-white" href="contato.html">Contato</a>
                         </li>
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/cadastro.html" class="nav-link text-white">
+                                <a href="cadastro.html" class="nav-link text-white">
                                     Logado como <b>Ricardo Maroquio</b>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/login.html" class="nav-link text-white">Sair</a>
+                                <a href="login.html" class="nav-link text-white">Sair</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
-                                <a href="/carrinho.html" class="nav-link text-white">
+                                <a href="carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
                             </li>
@@ -73,7 +73,7 @@
                     Atenciosamente,<br> Equipe Quitanda Online
                 </p>
                 <p>
-                    <a href="/index.html" class="btn btn-danger btn-lg">Voltar à Página Principal</a>
+                    <a href="index.html" class="btn btn-danger btn-lg">Voltar à Página Principal</a>
                 </p>
             </div>
         </main>
@@ -85,21 +85,21 @@
                         &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="/privacidade.html" class="text-decoration-none text-dark">
+                        <a href="privacidade.html" class="text-decoration-none text-dark">
                             Política de Privacidade
                         </a><br>
-                        <a href="/termos.html" class="text-decoration-none text-dark">
+                        <a href="termos.html" class="text-decoration-none text-dark">
                             Termos de Uso
                         </a><br>
-                        <a href="/quemsomos.html" class="text-decoration-none text-dark">
+                        <a href="quemsomos.html" class="text-decoration-none text-dark">
                             Quem Somos
                         </a><br>
-                        <a href="/trocas.html" class="text-decoration-none text-dark">
+                        <a href="trocas.html" class="text-decoration-none text-dark">
                             Trocas e Devoluções
                         </a>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="/contato.html" class="text-decoration-none text-dark">
+                        <a href="contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
                         </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
@@ -111,7 +111,7 @@
             </div>
         </footer>
     </div>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
